# finam-regrid

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  setup.cfg
benchmarks/: README.md  test_regrid.py
docs/source/: conf.py  index.rst
docs/source/about/: index.rst
docs/source/api/: index.rst
examples/: regrid_plot.py
src/finam_regrid/: __init__.py  adapter.py  tools.py
tests/: test_adapter.py  test_tools.py
