[metadata]
name = finam_regrid
description = ESMF/ESMPy regridding components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ufz.de/FINAM/finam-regrid
author = FINAM Developers
author_email = finam@ufz.de
maintainer = FINAM Developers
maintainer_email = finam@ufz.de
license = LGPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://FINAM.pages.ufz.de/finam/
    Source = https://git.ufz.de/FINAM/finam-regrid
    Tracker = https://git.ufz.de/FINAM/finam-regrid/-/issues
    Changelog = https://git.ufz.de/FINAM/finam-regrid/-/blob/main/finam_regrid/CHANGELOG.md

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.14.5,<2
    xarray>=2022.03
    finam @ git+https://git.ufz.de/FINAM/finam.git
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx>=3,<4
test =
    coverage[toml]>=5.2.1,<6
    pytest>=6.0,<7
    pytest-cov>=2.11.0,<3
